# fileshare

./: .envrc  Cargo.toml  README.md  compose.yaml  schema.gql
app/: codegen.ts  package-lock.json  package.json  vite.config.ts
app/src/: Router.tsx  main.tsx  style.css
app/src/components/: AuthLoaded.tsx  Modal.tsx
app/src/context/: AuthContext.tsx  UrqlContext.tsx
app/src/graphql/mutations/: CreateFile.gql  CreateFileShare.gql  UploadTarget.gql
app/src/graphql/queries/: DownloadFile.gql  FileSharesWithMe.gql  GerUsers.gql  MyFiles.gql
app/src/layout/: SiteLayout.tsx
app/src/modals/FileShareModal/: FileShareModal.tsx  FileShareModalContainer.tsx  useFileShareModal.ts
app/src/pages/index/: IndexPage.tsx  IndexPageContainer.tsx
app/src/pages/login/: LoginPage.tsx  LoginPageContainer.tsx
app/src/pages/logout/: LogoutPageContainer.tsx
app/src/pages/myFiles/: MyFilesPage.tsx  MyFilesPageContainer.tsx
app/src/pages/myPage/: MyPage.tsx  MyPageContainer.tsx
app/src/pages/register/: RegisterPage.tsx  RegisterPageContainer.tsx
app/src/pages/sharedFiles/: SharedFilesPage.tsx  SharedFilesPageContainer.tsx
app/src/pages/upload/: UploadPage.tsx  UploadPageContainer.tsx
app/src/utils/: useMutationWithError.tsx
migrations/: 20230609111719_db.down.sql  20230609111719_db.up.sql
src/: main.rs  routes.rs
src/graphql/: guards.rs  loaders.rs  mod.rs  scalars.rs  schema.rs
src/graphql/types/: file.rs  file_share.rs  mod.rs  upload_target.rs  user.rs
src/models/: file.rs  file_share.rs  mod.rs  user.rs
