[package]
name = "fileshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6"
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
async-graphql = { version = "5.0.10", features = ["dataloader", "chrono", "time"] }
async-graphql-axum = "5.0"
envy = "0.4.2"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "time"] }
rust-s3 = { version = "0.33.0", features = ["tokio-rustls-tls"] }
uuid = { version = "1.3.3", features = ["v4"] }
chrono = "0.4.26"
async-trait = "0.1.68"
time = "0.3.22"
argon2 = "0.5.0"
axum_session = { version = "0.2.3", features = ["postgres-rustls"] }
futures = "0.3.28"
axum-macros = "0.3.7"
serde_json = "1.0.96"
